--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.0'
     implementation 'com.adityak:browsemyfiles:1.9'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
