--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.0'
     implementation 'com.adityak:browsemyfiles:1.9'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "com.github.SUPERCILEX.poi-android:poi:${3.17}"
 }
