--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.adityak:browsemyfiles:1.9'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "com.github.SUPERCILEX.poi-android:poi:${3.17}"
+    implementation ("com.github.bumptech.glide:glide:4.9.0")
 }
